--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -250,6 +250,16 @@ input {
   }
 }
 
+.video-content-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  min-height: 0;
+  overflow: hidden;
+  height: 100%;
+}
+
 .video-player-wrapper {
   flex: 1;
   display: flex;
@@ -259,7 +269,6 @@ input {
   min-width: 0;
   min-height: 0;
   overflow: hidden;
-  height: 100%;
 
   @media (max-width: 768px) {
     width: 100%;
