feat: Enhance video functionality with viewport-aware playback and new video recording options

--- a/src/app/pages/media/media.component.html
+++ b/src/app/pages/media/media.component.html
@@ -14,7 +14,7 @@
         <span>Uploading...</span>
       </div>
       }
-      <button mat-raised-button (click)="openRecordVideoDialog()" [disabled]="mediaService.uploading()">
+      <button mat-raised-button (click)="layout.openRecordVideoDialog()" [disabled]="mediaService.uploading()">
         <mat-icon>videocam</mat-icon>
         Record Video
       </button>
