style: Adjust padding in sidenav content and comment out learn more section in introduction

--- a/src/app/components/introduction/introduction.html
+++ b/src/app/components/introduction/introduction.html
@@ -38,12 +38,12 @@
       </div>
 
       <!-- Learn more link button -->
-      <div class="learn-more-section">
+      <!-- <div class="learn-more-section">
         <button mat-button class="learn-more-button" (click)="showWelcomeDialog()">
           <mat-icon>info</mat-icon>
           Learn about Nostr and Nostria
         </button>
-      </div>
+      </div> -->
     </div>
 
     <!-- Logo and branding section -->
