--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -163,7 +163,7 @@ mat-sidenav-content {
   z-index: 1000;
   height: 56px;
   padding-bottom: env(safe-area-inset-bottom, 0px);
-  padding-top: 4px;
+  padding-top: 0;
 
   background-color: var(--mat-sys-background);
   justify-content: space-around;
@@ -193,8 +193,6 @@ mat-sidenav-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  padding: 6px 0 0 0;
   min-width: 0;
   height: 56px;
   border-radius: 0;
